# ds-codes

./: CMakeLists.txt  README.md  binarysearch.c  merge_sort.c  premitive-op.c  quick-sort-recursive.c
arrays/: array-stack.c  arrays.c  paranthesis-balancing.c  postfix.c  tower-of-hanoi.c
linked-list/: addition-of-polynomials.c  circular-linked-list.c  cycle-linked-list.c  doubly-linked-list.c  linked-list.c  reverse-linked-list.c  single-linked-list.c
practical 2/: LL-insertion.c  tree-countNodes.c
queue/: circular-queue.c  deque.c  priority-queue.c  queue-using-linked-list.c  queue.c
searching/: binary-iterative.c  binary-recursive.c  index-sequential.c  linear.c
sorting/: bubble-sort.c  insertion-sort.c  quick-sort-iterative.c  quick-sort-recursive.c  radix.c  selection-sort.c
stack/: string-implementation.c
